[workspace]
resolver = "2"
members = ["crates/xpm-core", "crates/xpm-cli"]

[workspace.package]
version = "0.83.0"
authors = ["Verseles <contact@verseles.com>"]
edition = "2021"
license = "BSD-4-Clause"
repository = "https://github.com/verseles/xpm"
homepage = "https://xpm.link"
description = "Universal package manager for any unix-like distro including macOS. Also experimental Windows support."
readme = "README.md"
keywords = ["package-manager", "cli", "linux", "macos", "universal"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Database
native_db = "0.8"
native_model = "0.4"

# Git
git2 = "0.19"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system
dirs = "5"
walkdir = "2"

# Terminal
owo-colors = { version = "4", features = ["supports-colors"] }
indicatif = "0.17"
console = "0.15"

# Crypto
sha2 = "0.10"
md-5 = "0.10"
sha1 = "0.10"
digest = "0.10"

# Utilities
semver = "1"
thiserror = "2"
anyhow = "1"
regex = "1"
slug = "0.1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
xpm-core = { path = "crates/xpm-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
